# loqi

./: .gitignore  BENCHMARKS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/agents/: crash-override.md  dick-gill.md  hackers.md  zero-cool.md
.claude/commands/: claim-audit.md  run-evidence.md  wrap.md
data/custom_benchmark/memories/: api_rate_limits.md  coding_standards.md  deployment_rules.md  project_auth_redesign.md  team_context.md  user_preferences.md
data/custom_benchmark/scenarios/: trigger_precision.yaml  trigger_promotion.yaml  trigger_recall.yaml
data/temporal_benchmark/: corpus.yaml
results/: ablation_results.json  agent_loop_loqi_memory.json  compaction_experiment.json  hard_benchmark.json  learning_curve.json  longmemeval_results.json  persistent_benchmark.json  temporal_benchmark.json
sandbox/: agent_loop.py  compaction_experiment.py  tasks.yaml  tasks_compaction.yaml
sandbox/memories/: coding_rules.md  project_policies.md
scripts/: download_benchmarks.py  run_ablation.py  run_hard_benchmark.py  run_learning_curve.py  run_longmemeval.py  run_persistent_benchmark.py  run_promotion.py  run_temporal_benchmark.py
src/loqi/: __init__.py
src/loqi/benchmarks/: custom_loader.py  loaders.py  schema.py
src/loqi/eval/: metrics.py  protocol.py  runner.py
src/loqi/graph/: embeddings.py  models.py  store.py  writer.py
src/loqi/hebbian/: consolidator.py  decay.py  episode.py  promoter.py  updater.py
src/loqi/llm/: arbitrator.py  client.py  trigger_gate.py
src/loqi/pipeline/: config.py
src/loqi/retrieval/: flat_rag.py  graph_rag.py  section_retrieval.py  trigger_rag.py
src/loqi/triggers/: extractor.py  matcher.py
tests/: test_closed_loop.py  test_config.py  test_consolidator.py  test_graph.py  test_hebbian.py  test_loaders.py  test_metrics.py  test_runner.py  test_triggers.py  test_writer.py
