[project]
name = "loqi-memory"
version = "0.1.0"
description = "A novel AI memory architecture combining associative triggers, focused/diffuse retrieval, and Hebbian learning"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Wyn Fox" },
]
keywords = ["memory", "retrieval", "hebbian", "knowledge-graph", "ai-agents", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/wf802222/loqi"
Repository = "https://github.com/wf802222/loqi"
Issues = "https://github.com/wf802222/loqi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
benchmarks = [
    "datasets>=3.0",
    "huggingface-hub>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loqi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
